--- a/about.qmd
+++ b/about.qmd
@@ -4,9 +4,6 @@ image: profile.jpg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
       href: https://linkedin.com
@@ -15,4 +12,4 @@ about:
       href: https://github.com
 ---
 
-Learning notes.
+I'm a telecommunications engineer currently working as an IoT backend developer.
