--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,15 @@
 ---
-title: "Posts"
+title: "Notes"
+subtitle: "About things i'm learning"
 listing:
   contents: posts
+  fields: [image, date, title, reading-time, description]
   sort: "date desc"
-  type: default
-  categories: true
+  type: grid
+  categories: false
   sort-ui: false
   filter-ui: false
 page-layout: full
 title-block-banner: true
+comments: false
 ---
